force-app/main/default/objects/Member__mdt/Member__mdt.object-meta.xml
<CustomObject>
    <label>Member</label>
    <pluralLabel>Members</pluralLabel>
</CustomObject>