force-app/main/default/objects/Member__mdt/fields/Field_Displayed__c.field-meta.xml
<CustomField>
    <fullName>Field_Displayed__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Field Displayed</label>
    <type>Checkbox</type>
</CustomField>