force-app/main/default/objects/Member__mdt/fields/Field_Editable__c.field-meta.xml
<CustomField>
    <fullName>Field_Editable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Field Editable</label>
    <type>Checkbox</type>
</CustomField>