force-app/main/default/objects/Member__mdt/fields/Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Field_Type__c</fullName>
    <label>Field Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>boolean</fullName>
                <default>true</default>
                <label>boolean</label>
            </value>
            <value>
                <fullName>text</fullName>
            </value>
            <value>
                <fullName>number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>